// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MySQLClient should list a subset of tables and columns in tmp database 1`] = `
Array [
  Object {
    "columns": Array [
      "id",
      "vin",
      "vendor",
      "make",
      "name",
      "year",
      "createdAt",
      "updatedAt",
      "vinHashValue1",
      "vinHashValue2",
      "vinHashValue3",
    ],
    "name": "VehicleInfo",
  },
]
`;

exports[`MySQLClient should list all tables and columns in tmp database 1`] = `
Array [
  Object {
    "columns": Array [
      "id",
      "vin",
      "vendor",
      "make",
      "name",
      "year",
      "createdAt",
      "updatedAt",
      "vinHashValue1",
      "vinHashValue2",
      "vinHashValue3",
    ],
    "name": "VehicleInfo",
  },
  Object {
    "columns": Array [
      "id",
      "vin",
      "vendor",
      "make",
      "name",
      "model",
      "year",
      "createdAt",
      "updatedAt",
    ],
    "name": "VehicleInfo2",
  },
]
`;

exports[`MySQLClient should list all tables and non generated columns in tmp database 1`] = `
Array [
  Object {
    "columns": Array [
      "id",
      "vin",
      "vendor",
      "make",
      "name",
      "year",
      "createdAt",
      "updatedAt",
    ],
    "name": "VehicleInfo",
  },
  Object {
    "columns": Array [
      "id",
      "vin",
      "vendor",
      "make",
      "name",
      "model",
      "year",
      "createdAt",
      "updatedAt",
    ],
    "name": "VehicleInfo2",
  },
]
`;
